# adwa1888s

./: pyproject.toml
adwa1888/: settings.py
